--- a/views/meme-result.hbs
+++ b/views/meme-result.hbs
@@ -3,11 +3,13 @@
   <div class="mt-boxes">
     <div class="mt-title"><img src="{{img}}" /></div>
     <div>
-      <h2>Left click for download</h2>
+      <h2>Right click for download</h2>
       <div class="button-edit">
         <button>
           <a href="/memes/update/{{_id}}">Edit!</a>
         </button>
+      </div>
+      <div class="button-edit">
         <button>
           <a href="/memes/delete/{{_id}}">Delete!</a>
         </button>
