--- a/views/partials/guestNav.hbs
+++ b/views/partials/guestNav.hbs
@@ -1,17 +1,19 @@
 <ul>
-  <li class='nav-links-item'>
-    <a href='/' title='Home'>Home</a>
+  <li class="nav-links-item">
+    <div class="nav-links-item-logo">
+      <a href="/" title="Home"><img src="/images/MEMETICS LOGO.png" /></a>
+    </div>
   </li>
 
-  <li class='nav-links-item'>
-    <a href='/memes' title='Meme List∫'>Meme List</a>
+  <li class="nav-links-item">
+    <a href="/memes" title="Meme List∫">Meme List</a>
   </li>
 </ul>
 
-<ul id='nav-mobile' class='left hide-on-med-and-down'>
+<ul id="nav-mobile" class="left hide-on-med-and-down">
 
-  <li class='nav-links-item'>
-    <a href='/users/login' title='Login'>Log In</a>
+  <li class="nav-links-item">
+    <a href="/users/login" title="Login">Log In</a>
   </li>
 
 </ul>
