--- a/views/partials/logNav.hbs
+++ b/views/partials/logNav.hbs
@@ -1,6 +1,8 @@
 <ul>
   <li class="nav-links-item">
-    <a href="/" title="Home">Home</a>
+    <div class="nav-links-item-logo">
+      <a href="/" title="Home"><img src="/images/MEMETICS LOGO.png" /></a>
+    </div>
   </li>
 
   <li class="nav-links-item">
@@ -9,7 +11,7 @@
 </ul>
 
 <ul id="nav-mobile" class="left hide-on-med-and-down">
-  <li><form id="logout-form" action="/users/logout" method="POST">
+  <li><form class="button-nav" id="logout-form" action="/users/logout" method="POST">
       <button>Logout</button>
     </form>
   </li>
