--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>{{title}}</title>
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <link rel="stylesheet" href="/stylesheets/style.css" />
     <link rel="stylesheet" href="/libs/glide/glide.core.min.css" />
     <link rel="stylesheet" href="/libs/glide/glide.theme.min.css" />
