--- a/views/meme-update.hbs
+++ b/views/meme-update.hbs
@@ -6,11 +6,11 @@
   <form action="/memes/update/{{memeToBeUpdated.id}}" method="POST">
     <div class="meme-text">
       <div class="meme-text-size">
-        <label for="text0">Insert text0</label>
+        <label for="text0">Text Box 1</label>
         <input type="text" name="text0" value="{{text0}}" />
       </div>
       <div class="meme-text-size">
-        <label for="text1">Insert text1</label>
+        <label for="text1">Text Box 2</label>
         <input type="text" name="text1" value="{{text1}}" />
       </div>
     </div>
