--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -2,15 +2,15 @@
   box-sizing: border-box;
 }
 
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Staatliches&display=swap");
 
 html,
 body {
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 0.9rem;
-  background-image: url('/images/photo-1563223566-f731efbdbab0.jpeg');
+  background-image: url("/images/photo-1563223566-f731efbdbab0.jpeg");
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -31,7 +31,7 @@ button {
   border-radius: 2em;
   box-sizing: border-box;
   text-decoration: none;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 300;
   color: #ffffff;
   background-color: rgba(200, 0, 0, 0.8);
@@ -47,10 +47,6 @@ a {
   color: #ffffff;
   text-decoration: none;
   font-weight: bold;
-}
-
-a:hover {
-  text-decoration: underline;
 }
 
 /* Main */
@@ -125,9 +121,8 @@ h1 {
   color: white;
   font-weight: bold;
   text-align: center;
-  /* padding-top: 0; */
   font-size: 25px;
-  line-height: 0px;
+  line-height: 12px;
   border: 2px solid white;
   cursor: pointer;
   transition: all 250ms ease-in-out;
@@ -149,7 +144,7 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: -20px;
+  margin-top: -10px;
 }
 
 #logo {
@@ -262,6 +257,10 @@ h1 {
   color: #000;
 }
 
+.list a:hover {
+  text-decoration: underline;
+}
+
 /* FOOTER */
 .footer-basic {
   width: auto;
@@ -357,7 +356,7 @@ h1 {
   border-radius: 2em;
   box-sizing: border-box;
   text-decoration: none;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-weight: 300;
   color: #ffffff;
   background-color: #4eb5f1;
@@ -424,6 +423,7 @@ h1 {
   margin-left: 10px;
   margin-right: 10px;
   margin-bottom: 20px;
+  text-shadow: 1px 2px 3px #000000bb;
 }
 
 .meme-text label {
@@ -441,8 +441,18 @@ h1 {
   align-items: flex-start;
 }
 
+.profile h2 {
+  margin-top: 10px;
+}
+
 .profile button {
   font-size: 0.6em;
+}
+
+.button-profile {
+  display: flex;
+  justify-content: end;
+  margin-right: 3%;
 }
 
 /*log in & sign in*/
@@ -454,7 +464,7 @@ h1 {
   margin-top: 50px;
   margin-bottom: 50px;
   border-radius: 4px;
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   color: white;
   box-shadow: 7px 13px 37px #000;
   border-radius: 8px;
@@ -473,7 +483,7 @@ h1 {
   margin-bottom: 16px;
   border: 1px solid #c51f1f;
   /* border: 1px solid #1f53c5; */
-  font-family: 'Roboto', sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 18px;
   color: white;
 }
@@ -605,6 +615,7 @@ h1 {
     right: 0;
     top: 0;
     z-index: 10;
+    padding: 2%;
   }
 
   .nav-links-item img {
@@ -614,10 +625,10 @@ h1 {
   }
 
   .nav-profile {
-    width: 12px;
-    height: 12px;
+    /* width: 12px;
+    height: 12px; */
     font-size: 20px;
-    line-height: 0px;
+    line-height: 8px;
   }
 
   /* horizontal scrolling*/
@@ -690,5 +701,14 @@ h1 {
 
   .meme-text label {
     font-size: 1em;
+  }
+
+  .button-nav {
+    display: none;
+  }
+
+  .profile h2 {
+    margin-top: 20px;
+    margin-bottom: 5px;
   }
 }
