--- a/views/meme-create+2.hbs
+++ b/views/meme-create+2.hbs
@@ -6,8 +6,8 @@
   <form action="/memes/create/{{one.id}}" method="POST">
     <div class="meme-text">
       {{#each numberOfBoxes}}
-        <div>
-          <label for="text">Insert text {{this}}</label>
+        <div class="meme-text-size">
+          <label for="text">Text {{this}}</label>
           <input type="text" name="text" />
         </div>
       {{/each}}
