--- a/views/meme-create.hbs
+++ b/views/meme-create.hbs
@@ -1,4 +1,3 @@
-
 <h1 class="title-memes">CREATE YOUR MEME!</h1>
 <div class="mt-boxes">
   <div class="mt-img-wrap">
@@ -7,15 +6,14 @@
   <form action="/memes/create/{{one.id}}" method="POST">
     <div class="meme-text">
       <div class="meme-text-size">
-        <label for="text0">Insert text0</label>
+        <label for="text0">Text Box 1</label>
         <input type="text" name="text0" />
       </div>
       <div class="meme-text-size">
-        <label for="text1">Insert text1</label>
+        <label for="text1">Text Box 2</label>
         <input type="text" name="text1" />
       </div>
     </div>
     <button type="submit">Create Meme!</button>
   </form>
 </div>
-
