--- a/views/partials/logNav.hbs
+++ b/views/partials/logNav.hbs
@@ -7,27 +7,27 @@
 
   </li>
 
-  <li class='nav-links-item'>
-    <a href='/memes' title='Meme List∫'>Templates</a>
+  <li class="nav-links-item">
+    <a href="/memes" title="Meme List∫">Templates</a>
   </li>
 
-  <li class='nav-links-item'>
-    <a href='/memes/community' title='Meme List∫'>Top Memes</a>
+  <li class="nav-links-item">
+    <a href="/memes/community" title="Meme List∫">Top Memes</a>
   </li>
 
 </ul>
 
 <ul id="nav-mobile" class="left hide-on-med-and-down">
-  <li><form class="button-nav" id="logout-form" action="/users/logout" method="POST">
+  {{! <li><form class="button-nav" id="logout-form" action="/users/logout" method="POST">
 
       <button>Logout</button>
     </form>
-  </li>
+  </li> }}
   <li>
     <a
-      class='nav-profile'
-      href='/users/user-profile'
-      title='Profile'
+      class="nav-profile"
+      href="/users/user-profile"
+      title="Profile"
     >{{userName}}</a>
   </li>
 </ul>
