--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -1,7 +1,7 @@
 {{! views/users/user-profile.hbs }}
 
-<div class='profile'>
   {{#if userInSession}}
+<div class='profile'>
     <h2>Welcome, {{userInSession.username}}!</h2>
     <p>This is your profile page!</p>
     <div class='mt-boxes'>
@@ -21,3 +21,6 @@
     <p>Still no logged in user, sorry!</p>
   {{/if}}
 </div>
+    <form class="button-profile" id="logout-form" action="/users/logout" method="POST">
+      <button>Logout</button>
+    </form>
