--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -119,7 +119,12 @@ h1 {
   text-decoration: underline;
 }
 .material-icons {
-  color: rgba(200, 0, 0, 0.8);
+  color: rgba(27, 26, 26, 0.8);
+  top: 3px;
+  position: relative;
+}
+.red{
+  color: red;
 }
 .nav-profile {
   display: block;
@@ -347,6 +352,10 @@ h1 {
   font-size: 1.2em;
   max-width: 100%;
   text-shadow: 1px 1px 3px #4e4e4e;
+  display: flex;
+  flex-direction: row;
+  align-content: center;
+  justify-content: space-around;
 }
 
 .mt-caption {
