--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,10 +1,10 @@
-* {
-  box-sizing: border-box;
-}
-
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Staatliches&display=swap');
+
+* {
+  box-sizing: border-box;
+}
 
 html,
 body {
@@ -123,7 +123,7 @@ h1 {
   top: 3px;
   position: relative;
 }
-.red{
+.red {
   color: red;
 }
 .fav {
@@ -166,6 +166,10 @@ h1 {
   align-items: center;
   margin-top: -20px;
 }
+#logout {
+  font-family: 'Poppins', sans-serif;
+  font-weight: 600;
+}
 
 #logo {
   height: 7rem;
@@ -199,6 +203,9 @@ h1 {
 }
 
 /* Start Tutorial */
+.main-p {
+  text-shadow: 1px 1px 6px #2c2c2c;
+}
 .tutorial {
   display: flex;
   flex-direction: row;
