--- a/views/partials/logNav.hbs
+++ b/views/partials/logNav.hbs
@@ -1,8 +1,8 @@
 <ul>
 
-  <li class="nav-links-item">
-    <div class="nav-links-item-logo">
-      <a href="/" title="Home"><img src="/images/MEMETICS LOGO.png" /></a>
+  <li class='nav-links-item'>
+    <div class='nav-links-item-logo'>
+      <a href='/' title='Home'><img src='/images/MEMETICS LOGO.png' /></a>
     </div>
 
   </li>
@@ -17,10 +17,15 @@
 
 </ul>
 
-<ul id="nav-mobile" class="left hide-on-med-and-down">
-  <li><form class="button-nav" id="logout-form" action="/users/logout" method="POST">
+<ul id='nav-mobile' class='left hide-on-med-and-down'>
+  <li><form
+      class='button-nav'
+      id='logout-form'
+      action='/users/logout'
+      method='POST'
+    >
 
-      <button>Logout</button>
+      <button id='logout'>Logout</button>
     </form>
   </li>
   <li>
