--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -126,6 +126,14 @@ h1 {
 .red {
   color: red;
 }
+.blue {
+  color: blue
+}
+.textDesc {
+  padding-right: 30px;
+  display: flex;
+  justify-content: flex-end;
+}
 .fav {
   font-size: 0.9rem;
 }
@@ -148,6 +156,31 @@ h1 {
   transition: all 250ms ease-in-out;
   box-shadow: 0px 0px 0px 0px white;
   border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.nav-profile2 {
+  display: block;
+  background: rgba(200, 0, 0, 0.8);
+  color: white;
+  font-weight: bold;
+  text-align: center;
+  text-decoration: none;
+  font-size: 25px;
+  line-height: 0px;
+  border: 2px solid white;
+  cursor: pointer;
+  transition: all 250ms ease-in-out;
+  box-shadow: 0px 0px 0px 0px white;
+  border-radius: 50%;
+  width: 40px;
+  height: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .nav-profile:hover {
@@ -164,7 +197,7 @@ h1 {
   display: flex;
   flex-direction: column;
   align-items: center;
-  margin-top: -20px;
+  margin-top: 40px;
 }
 #logout {
   font-family: 'Poppins', sans-serif;
@@ -309,6 +342,8 @@ h1 {
   font-weight: 700;
   font-size: 2.2rem;
   letter-spacing: 2px;
+  margin-bottom: 50px;
+  margin-top: 0;
 }
 
 .mt-boxes {
@@ -327,7 +362,7 @@ h1 {
 }
 
 .mt-box {
-  width: 20%;
+  width: 26%;
   height: 20%;
   max-width: 100%;
   min-width: 10em;
@@ -371,6 +406,7 @@ h1 {
   flex-direction: row;
   align-content: center;
   justify-content: space-around;
+  align-items: center;
 }
 
 .mt-caption {
@@ -454,6 +490,15 @@ h1 {
 
 .meme-text label {
   font-size: 1.5em;
+}
+.textForm{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  
+}
+.textForm input {
+  width: 50%;
 }
 
 /* Profile */
@@ -716,5 +761,17 @@ h1 {
 
   .meme-text label {
     font-size: 1em;
+  }
+}
+
+@media (max-width: 750px){
+  .mt-box{
+    width: 35%;
+  }
+}
+
+@media (max-width: 600px){
+  .mt-box{
+    width: 83%;
   }
 }
