--- a/views/partials/logNav.hbs
+++ b/views/partials/logNav.hbs
@@ -28,11 +28,10 @@
       <button id='logout'>Logout</button>
     </form>
   </li>
-  <li>
-    <a
-      class='nav-profile'
-      href='/users/user-profile'
-      title='Profile'
-    >{{userName}}</a>
+    <li>
+      <div class='nav-profile2'>
+        <div><a href='/users/user-profile' title='Profile'>{{userName}}</a></div>
+      </div>
+    </li>
   </li>
 </ul>
