--- a/views/meme-finished.hbs
+++ b/views/meme-finished.hbs
@@ -1,5 +1,5 @@
 <h1 class='title-memes'>CHECK OUT THE MOST POPULAR MEMES!</h1>
-<div class="text-shadow textDesc">
+<div class="textDesc">
 <p>
   <span>Click on <span class='material-icons'>favorite_border</span> to add to your favourites!</span>
   <br>
@@ -29,11 +29,19 @@
                 href='/users/login'
               ><span class='material-icons'>favorite_border</span></a></span>
         {{/if}}
-        {{#if ../userid}}  
-          <span>Likes <span id="likeButton" class="material-icons">thumb_up</span> <span data-meme-id='{{_id}}' class='likesButton'>{{likes}}</span></span>
+
+        {{#if ../userid}} 
+        
+          <span >Likes 
+            <span id="likeButton" class="material-icons">thumb_up</span> 
+            <span data-meme-id='{{_id}}' class='likesButton'>{{likes}}</span>
+          </span>
+
         {{else}}
+
           <span>Likes <span class="material-icons">thumb_up</span> <span>{{likes}}</span></span>
         {{/if}}
+
         </div>
       </div>
     </div>
