--- a/views/meme-create.hbs
+++ b/views/meme-create.hbs
@@ -14,6 +14,6 @@
         <input type='text' name='text1' />
       </div>
     </div>
-    <button type='submit'>Create Meme!</button>
+    <button class='logout' type='submit'>Create Meme!</button>
   </form>
 </div>
