--- a/views/partials/logNav.hbs
+++ b/views/partials/logNav.hbs
@@ -25,7 +25,7 @@
       method='POST'
     >
 
-      <button id='logout'>Logout</button>
+      <button class='logout'>Logout</button>
     </form>
   </li>
     <li>
