--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -144,6 +144,7 @@ h1 {
   justify-content: flex-end;
   text-shadow: 1px 1px 3px #4e4e4e;
   font-size: 1.2rem;
+  background-color: #fefefe5b;
 }
 .fav {
   font-size: 0.9rem;
@@ -339,7 +340,7 @@ h1 {
   font-size: 2.2rem;
   letter-spacing: 2px;
   margin-bottom: 50px;
-  margin-top: 0;
+  margin-top: 40px;
 }
 
 .mt-boxes {
@@ -470,6 +471,10 @@ h1 {
   margin-left: 10px;
   margin-right: 10px;
   margin-bottom: 20px;
+}
+
+.hide {
+  display: none;
 }
 
 .button-edit button {
