--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -52,7 +52,7 @@
   <form class="button-profile" id="logout-form" action="/users/logout" method="POST">
       <button>Logout</button>
   </form>
-  <p class="text-shadow">
+  <p class="text-shadow hide">
   <a href="/users/delete-user/{{userInSession._id}}">
     <button>Delete your account</button>
   </a>
