--- a/views/meme-create+2.hbs
+++ b/views/meme-create+2.hbs
@@ -1,17 +1,19 @@
 <h1 class="title-memes">CREATE YOUR MEME!</h1>
 <div class="mt-boxes">
   <div class="mt-img-wrap">
-    <img src="{{one.url}}" />
+    <img src="{{img}}" />
   </div>
-  <form action="/memes/create/{{one.id}}" method="POST">
-    <div class="meme-text">
-      {{#each numberOfBoxes}}
-        <div>
-          <label for="text">Insert text {{this}}</label>
-          <input type="text" name="text" />
-        </div>
-      {{/each}}
-    </div>
-    <button type="submit">Create Meme!</button>
-  </form>
+  <div class="formCreateUpdate">
+    <form action="/memes/create/{{one.id}}" method="POST">
+      <div class="meme-text">
+        {{#each numberOfBoxes}}
+          <div class="textForm">
+            <label for="text">Insert {{this}}</label>
+            <input type="text" name="text" />
+          </div>
+        {{/each}}
+      </div>
+      <button type="submit">Create Meme!</button>
+    </form>
+  </div>
 </div>
