--- a/views/meme-create.hbs
+++ b/views/meme-create.hbs
@@ -1,21 +1,21 @@
-
-<h1 class="title-memes">CREATE YOUR MEME!</h1>
-<div class="mt-boxes">
-  <div class="mt-img-wrap">
-    <img src="{{one.url}}" />
+<h1 class='title-memes'>CREATE YOUR MEME!</h1>
+<div class='mt-boxes'>
+  <div class='mt-img-wrap'>
+    <img src='{{img}}' />
   </div>
-  <form action="/memes/create/{{one.id}}" method="POST">
-    <div class="meme-text">
-      <div class="meme-text-size">
-        <label for="text0">Insert text0</label>
-        <input type="text" name="text0" />
+  <div class="formCreateUpdate">
+    <form action='/memes/create/{{one.id}}' method='POST'>
+      <div class='meme-text'>
+        <div class='meme-text-size textForm'>
+          <label for='text0'>Insert text 1</label>
+          <input type='text' name='text0' />
+        </div>
+        <div class='meme-text-size textForm'>
+          <label for='text1'>Insert text 2</label>
+          <input type='text' name='text1' />
+        </div>
       </div>
-      <div class="meme-text-size">
-        <label for="text1">Insert text1</label>
-        <input type="text" name="text1" />
-      </div>
-    </div>
-    <button type="submit">Create Meme!</button>
-  </form>
+      <button type='submit'>Create Meme!</button>
+    </form>
+  </div>
 </div>
-
