--- a/views/user-profile.hbs
+++ b/views/user-profile.hbs
@@ -3,21 +3,44 @@
 <div class='profile'>
   {{#if userInSession}}
     <h2>Welcome, {{userInSession.username}}!</h2>
-    <p>This is your profile page!</p>
+    <p>Check your memes!</p>
     <div class='mt-boxes'>
-      {{#each findMemes}}
-        <div class='mt-box'>
-          <div class='mt-img-wrap'><a href='/memes/update/{{_id}}'><img
-                src='{{url}}'
-              /></a></div>
-          <div class='mt-caption'><a
-              href='/memes/delete/{{_id}}'
-            >Delete!</a></div>
-        </div>
-      {{/each}}
+      {{#if findMemes}}
+        {{#each findMemes}}
+          <div class='mt-box'>
+            <div class='mt-img-wrap'><a href='/memes/update/{{_id}}'><img
+                  src='{{url}}'
+                /></a></div>
+            <div class='mt-caption'><a
+                href='/memes/delete/{{_id}}'
+              >Delete!</a></div>
+          </div>
+        {{/each}}
+      {{else}}
+        <p>You don't have any memes yet! <a href="/memes">Create your first one!</a></p>
+      {{/if}}
     </div>
-
+    <div>
+      <p>My Favourites!</p>
+      <div class='mt-boxes'>
+      {{#if fav}}
+        {{#each fav}}
+          <div class='mt-box'>
+            <div class='mt-img-wrap'>
+              <img src='{{url}}'>
+            </div>
+          </div>
+        {{/each}}
+      </div>
+      {{else}}
+          <p>Still no favourites added</p>
+      {{/if}}
+    </div>
   {{else}}
     <p>Still no logged in user, sorry!</p>
   {{/if}}
+  <p><a href="/users/delete-user/{{userInSession._id}}"><button>Delete your account</button></a></p>
+  <form class='button-nav' id='logout-form' action='/users/logout' method='POST'>
+    <button id='logout'>Logout</button>
+  </form>
 </div>
