favourites con addEventListener

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -7,7 +7,7 @@
     <ul class="glide__slides">
       {{#each fewMemes}}
 
-        <li class="glide__slide"><a href="/memes/create/{{id}}"></a><img src="{{url}}" /></li>
+        <li class="glide__slide"><a href="/memes/create/{{id}}"><img src="{{url}}" /></a></li>
 
       {{/each}}
     </ul>
